# ESP_Station

./: README.md  azure-pipelines-1.yml  azure-pipelines.yml  sdkconfig
main/: CMakeLists.txt  blink.c  cert.pem  component.mk  http.c  http.h  main.c  ota.c  ota.h  sensor.c  sensor.h  user_i2c.c  user_i2c.h  utils.c  utils.h  wifi.c  wifi.h  wifi_functions.c  wifi_functions.h
website/: add_data.php  index.php  newest_data.php  previous_data.php  script.js  style.css
